Fix video bug image background/overflow on mobile issue

--- a/source/assets/stylesheets/structures/_video.sass
+++ b/source/assets/stylesheets/structures/_video.sass
@@ -51,10 +51,8 @@
 .video-thumbnail
   +stretch
   background: $c-black
-  overflow: hidden
+  background-position: center
+  background-size: cover
   width: 110px
   +respond-to($g-s)
     width: 130px
-  img
-    height: auto
-    width: 100%
